breadcrumb flex wrap fix

--- a/src/Components/Breadcrumb/Breadcrumb.sass
+++ b/src/Components/Breadcrumb/Breadcrumb.sass
@@ -3,6 +3,9 @@
     @include HorizontalFlex
     margin: 15px 0px
     align-self: flex-start
+    white-space: nowrap
+    max-width: 100%
+    flex-wrap: wrap
     .BreadcrumbDivider
         border-right-color: grey
         border-right-style: solid
