--- a/src/Pages/Searchbar/Searchbar.sass
+++ b/src/Pages/Searchbar/Searchbar.sass
@@ -17,6 +17,7 @@ $containerMaxWidth: 960px
   margin-right: 15px
 .OutletContainer
   min-height: calc(100vh - $searchbarHeight)
+  overflow: auto
 
 .Container
   @include VerticalFullFlex
